--- a/app/assets/stylesheets/diseases.css
+++ b/app/assets/stylesheets/diseases.css
@@ -1,11 +1,12 @@
 #overview{
-    margin-left: 3.5%;
-    margin-top: 1%;
-    margin-right: 70%;
-    margin-bottom: 3%;
-    color: white;
+
+    margin-right: 69%;
+    margin-top: 2%;
+    margin-bottom: 6%;
+    color: #000000;
     text-align: left;
-    border: solid 1px white;
+    border: solid 1px #000000;
+    border-radius: 15pt;
     padding: 10pt 10pt 16pt 10pt ;
     line-height: 20pt;
     display: inline-block;
@@ -14,7 +15,7 @@
 
 #anker{
     text-decoration: none;
-    color: white;
+    color: #000000;
     font-size: 16pt ;
     font-family: "Segoe UI Light";
 }
