--- a/app/views/diseases/wikiMain_page.html.erb
+++ b/app/views/diseases/wikiMain_page.html.erb
@@ -1,5 +1,19 @@
+<style>
+  #menuLink{
+    color: #000000;
+    text-decoration: none;
+    border: none;
+  }
+
+    a:link{
+      color: #000000;
+    }
+
+
+</style>
+
 <div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
 </div>
 
