--- a/app/views/pages/_newsline.erb
+++ b/app/views/pages/_newsline.erb
@@ -1,6 +1,6 @@
 <div id="laufsch">
   <form name="frm">
-    <input type="text" name="ticker" style="text-align: center; width: 100%; color: #ffffff;background: rgba(0, 0, 0, 0);letter-spacing: 0.1em;border:0px;font-family: Segoe UI Light !important; font-size:12pt;padding: 2pt;">
+    <input type="text" name="ticker" style="text-align: center; width: 100%; color: #000000;background: rgba(255, 255,255, 0);letter-spacing: 0.1em;border:0px;font-family: Segoe UI !important; font-size:12pt;padding: 2pt;">
   </form>
 </div>
 
