--- a/app/views/pages/impfpass_page.html.erb
+++ b/app/views/pages/impfpass_page.html.erb
@@ -1,5 +1,5 @@
 <div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
 </div>
 
@@ -24,7 +24,6 @@
 
       <%= link_to "Impfkalender", '/vaccination_information', id: "link_to_vacc_information"%>
       <%= link_to "Impfung hinzufügen",  new_vaccination_card_path, id: "link_to_vacc_information"%>
-    </div>
 
     <div id="link_to_vacc_information"></div>
 
@@ -64,4 +63,5 @@
 
     </div>
   </div>
+</div>
 </div>
