--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -1,48 +1,129 @@
-#SeitenfensterLinks{
-    position: absolute;
-    text-align: left !important;
-    border-radius: 0 60% 60% 0;
-    top: 0%;
-    height: 50%;
-    padding: 5% 1% 1% 2%;
-    background: rgba(0, 0, 0, 0.6);
-    width: 7%;
-    min-width: 180px;
-    margin-top: 7%;
-    float:left;
-    clear: both;
-    z-index: 1;
 
-    /*for fadeout/default invisibility*/
-    opacity: 0;
-    -webkit-transition:all 1s linear;
-    -webkit-transition-delay: 4s;
+.navigation-wrapper {
+    position: relative;
+}
+.navigation-button {
+    will-change: transform;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    z-index: 101;
+    top: 3%;
+    right: 97%;
+    background: transparent;
+    cursor: pointer;
+}
+.navigation-button .fa {
+    border: 2pt solid #14ff14;
+    border-radius: 6pt;
+    padding: 5pt;
+    color: #14ff14;
 }
 
-#SeitenfensterLinks:hover{
+
+.navigation-menu ul li {
+    list-style: none;
+    font-family: "Segoe UI";
+    font-size: 1.6em;
+    line-height: 3.0em;
+    color: #000000;
+}
+
+.navigation-menu {
+    content: '';
+    position: fixed;
+    top:9%;
+    bottom: 10%;
+    right: 140%;
+    width: 40%;
+    background: white;
+    height: 70%;
+    transform: skewX(0deg) translate(100%, 0);
+    transform-origin: bottom right;
+    transition: all .2s ease-in;
+    border: #14ff14 solid 0;
+    border-radius: 0 3% 3% 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    z-index: 10;
+}
+.navigation-menu ul {
+
+    position: fixed;
+    left: 70%;
+    width: 50%;
+    top: 10%;
+    text-align: left;
     opacity: 1;
-    -webkit-transition:all 1s linear;
+    z-index: 12;
+
 }
-
-#menu{
-
-    opacity: 100%;
-    height: 100%;
-    color: white;
+.navigation-menu ul li {
+    position: relative;
+    z-index: 120;
 }
-
-#menuLink *{
-
-    padding: 0.5% 0% 0.5% 0% ;
-    line-height: 2.0em;
-    font-size: 1.6em ;
-    font-family: "Segoe UI Light";
+.navigation-menu ul li  a {
+    border: none;
+    color: #000000;
     text-decoration: none;
-    color: white;
+}
+.navigation-menu.active {
+    transform:  translate(135%,0);
 
 }
 
-#menuLink :hover{
-    color: rgba(49,165,159,1);
+img
+{
+    margin-right: 2%;
+    vertical-align: text-top;
+}
+div ul li p
+{
+    display: inline-block;
+    vertical-align: center  ;
 }
 
+.navigation-menu li {
+    opacity: 0;
+    transform: translate(0, 10px);
+    transition: all .0s ease-in .3s;
+    z-index: 15;
+
+}
+.navigation-menu.active li {
+    opacity: 1;
+    transform: translate(0,0);
+    transition: all .2s ease-in 0s;
+    z-index: 15;
+}
+.navigation-menu.active li:nth-child(1) {
+    transition-delay: .3s;
+}
+.navigation-menu.active li:nth-child(2) {
+    transition-delay: .4s;
+}
+.navigation-menu.active li:nth-child(3) {
+    transition-delay: .5s;
+}
+.navigation-menu.active li:nth-child(4) {
+    transition-delay: .6s;
+}
+.navigation-menu.active li:nth-child(5) {
+    transition-delay: .7s;
+}
+.navigation-menu.active li:nth-child(6) {
+    transition-delay: .8s;
+}
+.navigation-menu.active li:nth-child(7) {
+    transition-delay: .9s;
+}
+.navigation-menu.active li:nth-child(8) {
+    transition-delay: .10s;
+}.navigation-menu.active li:nth-child(9) {
+     transition-delay: .11s;
+ }
+.navigation-menu.active li:nth-child(10) {
+    transition-delay: .12s;
+}
