--- a/app/assets/stylesheets/newsline.css
+++ b/app/assets/stylesheets/newsline.css
@@ -1,17 +1,17 @@
 #laufsch
 {
     padding-bottom: 1%;
-    padding-left: 1%;
-    padding-right: 1%;
-    border-radius: 150pt 150pt 0% 0%;
+
+    border-radius: 15pt 15pt 0% 0%;
     position: fixed;
     font-family: "Segoe UI Light" !important;
     width: 85%;
-    bottom: 0%;
+    bottom: 0;
     margin-left: 6%;
-    height: 1.25%;
-    color: #ffffff;
+    height: 2.5%;
+    color: #000000 !important;
     text-align: center; font-style: normal; font-size: 14.5pt;
-    background: rgba(0,0,0, .6);
+    background: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 3;
 }
