--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -300,16 +300,34 @@ body {
 
 /*Login Seite*/
 
+#link_to_Antrag3{
+    display: flex;
+    justify-content: center;
+    color: #000000;
+    background: #ffffff;
+    border: solid 0 #ffffff;
+    padding: 2%;
+    border-radius: 10pt;
+    text-decoration: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width:70%;
+    margin-bottom: 2%;
+    margin-left: 13%;
+}
 #log{
     margin-top: 30%;
     z-index: 2;
     text-align: center;
-    color: white;
+    color: #000000;
     padding-top: 3%;
-    padding-bottom: 2%;
-    background-color: rgba(0,0,0,0.8);
-    min-width: 500px;
+    padding-bottom: 5%;
+    background-color: #ffffff;
+    border: solid 0 #ffffff;
+    border-radius: 15pt;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    min-width: 320pt;
 }
+
 
 #loginContainer{
      position: absolute;
@@ -322,26 +340,26 @@ body {
  }
 
 #loginLogin{
+    margin-bottom: 6%;
     display: inline-block;
-    padding: 1% 3% 1% 3%;
-    font-family: "Segoe UI Light";
+    padding: 0 3% 1% 3%;
+    font-family: "Segoe UI";
     font-size: 16pt;
-    margin-bottom: 8%;
-    color: white;
-    text-align: center;
+    color: #000000;
+    text-align: right;
+    border: solid 0 #ffffff;
+    border-radius: 10pt;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-    border-color: white;
-    border-width: 1.5px;
-    border-style: solid;
 
 
 }
 
 #linkLogin{
     padding: 1%;
-    font-family: "Segoe UI Light";
+    font-family: "Segoe UI";
     font-size: 16pt;
-    color: white;
+    color: black;
     border-style: none;
    text-decoration: none;
     background-color: transparent;
@@ -373,14 +391,16 @@ body {
 #loginInput {
 
     padding: 2%;
-    color: white;
+    color: #000000;
     font-family: "Segoe UI Light";
     font-size: 16pt;
     outline: none;
     background-color: transparent;
     width: 90%;
-    border-color: white;
-    border-width: 2px;
+    border: solid 0 #ffffff;
+    border-radius: 10pt;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 5%;
 
 }
 
@@ -416,3 +436,17 @@ padding: 0;
     border-radius: 0 50px 50px 0;
     min-width: 35pt;
 }
+
+#accInfoBackContainer{
+    background: #ffffff;
+    color: #000000;
+    border: #14ff14 solid 0;
+    border-radius: 15pt;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 25%;
+    margin-left: 37.5%;
+    margin-top: 3%;
+    padding-bottom: 0.5%;
+
+}
+
