--- a/app/views/diseases/show.html.erb
+++ b/app/views/diseases/show.html.erb
@@ -1,5 +1,5 @@
 <div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
 </div>
 
@@ -14,6 +14,7 @@
   <div id="wikiTitle"><%=@disease.name %></div>
 
 <br>
+  <div id="inhalt">
   <div id="overview">
   <a href="#Anker11" id="anker">1.1 Was ist <%=@disease.name %>?</a><br>
   <a href="#Anker12" id="anker">1.2 Wie infiziert man sich?</a><br>
@@ -22,7 +23,7 @@
   </div>
 
 
-  <div id="inhalt">
+
   <br><h2 id="Anker11">1.1 Was ist <%=@disease.name %>?</h2>
   <%= @disease.what%><br><br>
 
