--- a/app/views/pages/flysearch.html.erb
+++ b/app/views/pages/flysearch.html.erb
@@ -16,7 +16,7 @@
 </style>
 
 <div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
 </div>
 
