--- a/app/views/pages/test_page.html.erb
+++ b/app/views/pages/test_page.html.erb
@@ -13,23 +13,6 @@
     }
 
 
-    .Seitenfenster2{
-      margin: 13% -0 ;
-
-      float: right;
-
-      background: rgba(0,0,0, .35);
-      width: 9vw;
-      bottom: 2em;
-      border-bottom-left-radius: 10px;
-      border-top-left-radius: 10px;
-      padding: 10px 10px 20px 30px;
-      z-index: 2;
-
-    }
-
-
-
 #menuLink *{
   text-decoration: none;
   color: white;
@@ -48,8 +31,8 @@
   position: fixed;
   z-index: 1;
   padding-bottom: 0%;
-  background: rgba(0,0,0,.6);
-  color: white;
+  background: #ffffff;
+  color: #000000;
   text-align: left;
   width: 35%;
   min-width: 504pt;
@@ -57,6 +40,9 @@
   margin-left: 20%;
   font-family: "Segoe UI Light";
   font-size: 14pt;
+  border: #14ff14 solid 0;
+  border-radius: 15pt ;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
@@ -70,7 +56,9 @@
 #tableHeader{
   font-size: 18pt;
   font-family: "Segoe UI";
-  background: rgba(49,165,159,1);
+  background: rgba(3,172,29,1);
+  border: #03AC13 solid 0;
+  border-radius: 15pt 15pt 0 0 ;
   padding: 1% 0% 1% 2%;
   margin-bottom: 2%;
 }
@@ -107,8 +95,8 @@ width: 30%;
       position: fixed;
       z-index: 1;
       padding-bottom: 0%;
-      background: rgba(0,0,0,.5);
-      color: white;
+      background: #ffffff;
+      color: #000000;
       text-align: left;
       width: 35%;
       min-width: 504pt;
@@ -116,6 +104,9 @@ width: 30%;
       margin-left: 20%;
       font-family: "Segoe UI Light";
       font-size: 14pt;
+      border: #14ff14 solid 0;
+      border-radius: 15pt ;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     }
 
@@ -154,8 +145,8 @@ width: 30%;
 
       position: fixed;
       z-index: 1;
-      background: rgba(0,0,0,.6);
-      color: white;
+      background: #ffffff;
+      color: #000000;
       text-align: left;
       width: 25%;
       min-width: 360pt;
@@ -166,6 +157,9 @@ width: 30%;
       font-size: 14pt;
       max-height: 58.5%;
       overflow: hidden;
+      border: #14ff14 solid 0;
+      border-radius: 15pt ;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     }
 
@@ -295,11 +289,11 @@ width: 30%;
 </head>
 
 <div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "backgroundAfterLogin.jpg" , size: "2048x1080"  %>
+  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
 </div>
 
-<div class="verdunkelung">
+
 
 <div id="MapFenster">
 
@@ -605,9 +599,6 @@ width: 30%;
 
     -->
 
-</div>
-</div>
-</div>
 </div>
 </html>
 
