--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -46,6 +46,8 @@
     border: #14ff14 solid 0;
     border-radius: 0 3% 3% 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    overflow-y: auto;
+    overflow-x: hidden;
 
     z-index: 10;
 }
