--- a/app/views/pages/_leftsidepart.html.erb
+++ b/app/views/pages/_leftsidepart.html.erb
@@ -14,6 +14,7 @@
           <li><%= link_to "Users", admin_users_path %></li>
           <li><%= image_tag "main.png" , size: "32x32"%><%= link_to "Home", "/main" %></li>
           <li><%= image_tag "impfpass.png" , size: "32x32"%><%= link_to "Impfungen", "/impfpass" %></li>
+        <li><%= image_tag "impfpass.png" , size: "32x32"%><%= link_to "Impfstoffverzeichnis", "/vaccinations" %></li>
           <li><%= link_to "Patienten Impfungen", vaccination_cards_path %></li>
           <li><%= image_tag "Map.png" , size: "32x32"%><%= link_to "Weltkarte", "/world" %></li>
           <li><%= link_to "Lethalität", "/region_lethalities" %></li>
@@ -26,6 +27,7 @@
         <% else if current_user.doc?%>
             <li> <%= image_tag "profile.png" , size: "32x32"%> <%= link_to "Accountinfo", "/accinfo" %></li>
             <li><%= image_tag "main.png" , size: "32x32"%><%= link_to "Home", "/main" %></li>
+          <li><%= image_tag "impfpass.png" , size: "32x32"%><%= link_to "Impfstoffverzeichnis", "/vaccinations" %></li>
             <li><%= image_tag "impfpass.png" , size: "32x32"%><%= link_to "Impfungen", "/impfpass" %></li>
           <li><%= link_to "Patienten Impfungen", vaccination_cards_path %></li>
             <li><%= image_tag "Map.png" , size: "32x32"%><%= link_to "Weltkarte", "/world" %></li>
