--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,17 +1,12 @@
-<div class="image-container" xmlns="http://www.w3.org/1999/html">
-  <%= image_tag "healthcare.png" , size: "2048x1080"  %>
 
-</div>
-
-<div class="verdunkelung">
+<div class="adminEditPages">
 
   <%= render partial: 'pages/leftsidepart'%>
   <p id="notice"><%= notice %></p>
-  <div id="tabellenPlatz">
-    <div id="wikiTitle">Users</div>
+    <h1>Users</h1>
 
 
-<h1></h1>
+
 
 <table id="usertable">
   <thead>
