--- a/app/views/diseases/new.html.erb
+++ b/app/views/diseases/new.html.erb
@@ -1,5 +1,9 @@
+<div class="adminEditPages">
 <h1>Add Disease to Database</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back to overview Table' , controller: 'diseases', action: 'index'%>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
