--- a/app/views/pages/welcome_page.html.erb
+++ b/app/views/pages/welcome_page.html.erb
@@ -98,8 +98,8 @@
 
   <div id="vision4a">
     <div id="contentVisii">
-      <h1 class="headline" style="text-align: left !important;">Bleiben Sie geschützt</h1>
-      <p><br>Nach jahrelanger Forschung sind wir stolz darauf, Ihnen berichten zu können, dass ihre Daten, dank der verwendeten Quantentechnologie, auch in Zukunft in besten Händen sind.
+      <h1 class="headline" style="text-align: left !important;">Ausblick</h1>
+      <p><br>Wir arbeiten stets daran Ihnen die bestmögliche Sicherheit Ihrer Daten zu gewährleisten. Deshalb werden wir im Bereich der Quantenkryptographie forschen, da dies einen neuen Standard in der Datensicherheit bilden wird.
       </p>
     </div>
   </div>
