--- a/app/views/region_lethalities/new.html.erb
+++ b/app/views/region_lethalities/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Region lethality</h1>
 
+<div class="adminEditPages">
+  <h1>New Region lethality</h1>
 <%= render 'form', region_lethality: @region_lethality %>
 
 <%= link_to 'Back', region_lethalities_path %>
+</div>
+
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
