--- a/app/views/vaccination_cards/show.html.erb
+++ b/app/views/vaccination_cards/show.html.erb
@@ -1,3 +1,4 @@
+<div class="adminEditPages">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -57,3 +58,6 @@
 
 <%= link_to 'Edit', edit_vaccination_card_path(@vaccination_card) %> |
 <%= link_to 'Back', vaccination_cards_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
