--- a/app/views/vaccinations/edit.html.erb
+++ b/app/views/vaccinations/edit.html.erb
@@ -1,6 +1,11 @@
+
+<div class="adminEditPages">
 <h1>Editing Vaccination</h1>
 
 <%= render 'form', vaccination: @vaccination %>
 
 <%= link_to 'Show', @vaccination %> |
 <%= link_to 'Back', vaccinations_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
