--- a/app/views/vaccinations/new.html.erb
+++ b/app/views/vaccinations/new.html.erb
@@ -1,5 +1,11 @@
+
+<div class="adminEditPages">
 <h1>New Vaccination</h1>
 
 <%= render 'form', vaccination: @vaccination %>
 
 <%= link_to 'Back', vaccinations_path %>
+</div>
+
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
