--- a/app/assets/stylesheets/leftsidepart.css
+++ b/app/assets/stylesheets/leftsidepart.css
@@ -34,12 +34,11 @@
 .navigation-menu {
     content: '';
     position: fixed;
-    top:9%;
-    bottom: 10%;
-    right: 140%;
-    width: 40%;
-    background: white;
-    height: 70%;
+    top:0;
+    bottom: 0;
+    right: 150%;
+    width: 50%;
+    height: 100%;
     transform: skewX(0deg) translate(100%, 0);
     transform-origin: bottom right;
     transition: all .2s ease-in;
@@ -48,15 +47,16 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     overflow-y: auto;
     overflow-x: hidden;
-
-    z-index: 10;
+    alignment: top;
+    background: white linear-gradient(90deg, white 70%, rgb(20,255,20) 110%);
+    z-index: 999;
 }
 .navigation-menu ul {
 
     position: fixed;
-    left: 70%;
+    left: 55%;
     width: 50%;
-    top: 10%;
+    top: 5%;
     text-align: left;
     opacity: 1;
     z-index: 12;
@@ -72,7 +72,7 @@
     text-decoration: none;
 }
 .navigation-menu.active {
-    transform:  translate(135%,0);
+    transform:  translate(150%,0);
 
 }
 
@@ -101,31 +101,40 @@ div ul li p
     z-index: 15;
 }
 .navigation-menu.active li:nth-child(1) {
-    transition-delay: .3s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(2) {
-    transition-delay: .4s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(3) {
-    transition-delay: .5s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(4) {
-    transition-delay: .6s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(5) {
-    transition-delay: .7s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(6) {
-    transition-delay: .8s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(7) {
-    transition-delay: .9s;
+    transition-delay: .0s;
 }
 .navigation-menu.active li:nth-child(8) {
-    transition-delay: .10s;
+    transition-delay: .0s;
+
 }.navigation-menu.active li:nth-child(9) {
-     transition-delay: .11s;
+     transition-delay: .0s;
  }
 .navigation-menu.active li:nth-child(10) {
-    transition-delay: .12s;
+    transition-delay: .0s;
+}
+
+.navigation-menu.active li:nth-child(11) {
+    transition-delay: .0s;
+}
+
+.navigation-menu.active li:nth-child(12) {
+    transition-delay: .0s;
 }
