--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -1,6 +1,8 @@
+
+<div class="adminEditPages">
 <h1>Listing diseases</h1>
 
-<table>
+<table id="tabelleSI">
   <tr>
     <th>Name</th>
     <th>Was ist die Krankheit?</th>
@@ -29,3 +31,6 @@
 <br />
 
 <%= link_to 'New Disease', new_disease_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
