--- a/app/views/region_lethalities/index.html.erb
+++ b/app/views/region_lethalities/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
-
+<div class="adminEditPages">
 <h1>Region lethalities</h1>
 
-<table>
+<table id="tabelleSI">
   <thead>
     <tr>
       <th>Disease</th>
       <th>Province</th>
       <th>Lethality</th>
-      <th colspan="3"></th>
+      <th colspan="3">Options</th>
     </tr>
   </thead>
 
@@ -27,6 +27,10 @@
 
 <br>
 
+
 <%= link_to 'New Region lethality', new_region_lethality_path %>
 
 <%= link_to 'Home', root_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
