--- a/app/views/vaccinations/index.html.erb
+++ b/app/views/vaccinations/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<div class="adminEditPages">
 <h1>Vaccinations</h1>
 
-<table>
+<table id="tabelleSI">
   <thead>
     <tr>
       <th>Disease</th>
@@ -29,3 +29,6 @@
 <br>
 
 <%= link_to 'New Vaccination', new_vaccination_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
