--- a/app/views/vaccinations/show.html.erb
+++ b/app/views/vaccinations/show.html.erb
@@ -1,3 +1,4 @@
+<div class="adminEditPages">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -17,3 +18,6 @@
 
 <%= link_to 'Edit', edit_vaccination_path(@vaccination) %> |
 <%= link_to 'Back', vaccinations_path %>
+</div>
+<%= render partial: 'pages/newsline'%>
+<%= render partial: 'pages/leftsidepart'%>
