--- a/app/views/pages/worldmap_page.html.erb
+++ b/app/views/pages/worldmap_page.html.erb
@@ -163,7 +163,7 @@
 
 
     <select id="arztcombo" class="elementeOberesSuchfeld">
-      <option value ="" selected disabled>Fachrichtung des Arztes auswählen</option>
+      <option value = null selected disabled>Fachrichtung des Arztes auswählen</option>
       <option value="Alle Fachrichtungen">Alle Fachrichtungen</option>
       <option value="Allgemeinmedizin">Allgemeinmedizin</option>
       <option value="Anästhesiologie">Anästhesiologie</option>
@@ -196,7 +196,7 @@
     </select>
 
     <select id="oberesSuchfeldDistanzBox" class="elementeOberesSuchfeld" >
-      <option value ="" selected disabled>Entfernung angeben</option>
+      <option value = null selected disabled>Entfernung angeben</option>
       <option value=0.5> 0.5 km</option>
       <option value=0.75> 0.75 km</option>
       <option value=1> 1 km </option>
@@ -394,7 +394,6 @@
           var distbox = document.getElementById("oberesSuchfeldDistanzBox");
 
 
-
           aTyp.addEventListener("change", suche);
 
           distbox.addEventListener("change", suche);
@@ -423,7 +422,7 @@
                   if (special != 'null' && special !='Alle Fachrichtungen' && distance == 'null'){ typus = 1;}
                   else if(special == 'null' && distance != 'null' || special == 'Alle Fachrichtungen' && distance != 'null'){typus = 2;}
                   else if(special != 'null' && distance != 'null'){ typus = 3;}
-                  else if(special == 'Alle Fachrichtungen' && distance == 'null'){ typus = 0;}
+                  else if(special == 'Alle Fachrichtungen' && distance == 'null'){ typus = 1;}
                   else typus = 1;
 
 
@@ -580,7 +579,7 @@
 
                       var infowindow0 = new google.maps.InfoWindow();
                       infowindow0.setPosition(coordinate);
-                      infowindow0.setContent(markerContent );
+                      infowindow0.setContent(markerContent);
                       infowindow0.open(map, m);
 
                   });
@@ -636,7 +635,7 @@
 
           //Lade GEOJson
 
-          var mortalitaetsSlider = document.getElementById('mortalitaet');
+          var mortalitaetsSlider = document.getElementById('letalitaet');
 
           var layer = new google.maps.FusionTablesLayer({});
 
@@ -645,11 +644,11 @@
 
           function showRegionMortalitaet() {
 
-              var num = document.getElementById('mortalitaet').value;
+              var num = document.getElementById('letalitaet').value;
 
               var where = "MORTALITY < " + num + " AND MORTALITY > 0";
 
-              var newOverlay = new google.maps.FusionTablesLayer({
+              /*var newOverlay = new google.maps.FusionTablesLayer({
                   query: {
                       select: 'GEOMETRY',
                       from: '1K9H0Semwh8vEVR0-_hDGh7I3yWYHaNeSCP9p2VNs',
@@ -670,10 +669,10 @@
                   }]
               });
 
-              layer.setMap(null);
+              layer.setMap(null);*/
 
               //neues Info-Fenster
-              google.maps.event.addListener(newOverlay, 'click', function(e) {
+            /*  google.maps.event.addListener(newOverlay, 'click', function(e) {
 
                   // Change the content of the InfoWindow
 
@@ -683,24 +682,24 @@
                       + "<b>Einwohnerzahl:</b> " + e.row['POPULATION'].value + "</br></br>" + "<b>Krankheit:</b> "
                       + e.row['ILLNESS'].value + "</br></br>" + "<b>Mortalität:</b>" + e.row['MORTALITY'].value + " %" +
                       "</br></br>"
-              });
+              });*/
 
-              layer = newOverlay;
-
-
-              layer.setMap(map);
+              //layer = newOverlay;
 
 
-              return $.ajax({
+              //layer.setMap(map);
+
+
+              /*return $.ajax({
 
                   type: "POST",
                   url: "/provinces/matches",
                   data: {max: num},
                   success: function(data){
 
-                      alert(data);
+                   //   alert(data);
                       var  list = JSON.parse(data);
-
+                      alert(list);
                       return list;
 
                   },
@@ -708,7 +707,7 @@
                       alert("An error occured while requesting the Data from the server.\n Error: " + data.message);
                       return false;
                   }
-              });
+              });*/
           }
 
       }
